mobile x overflow due to header - correction

--- a/wp-content/themes/reade-theme/src/styles/base/_header.scss
+++ b/wp-content/themes/reade-theme/src/styles/base/_header.scss
@@ -297,6 +297,8 @@ ul.header-links {
   }
 }
 @include respond-below(lg) {
+  .doc-notifications + .search-wrap, 
+  .language-switcher, 
 	ul.header-links {
 		display: none;
 	}
